# lab-2

./: CMakeLists.txt  CMakePresets.json  Tendentsii_na_rynke_truda (3).docx  ip_filter.cpp  ip_filter.h  ip_filter.tsv  realese.yml  realese2.yml  test_ip_filter.cpp
.github/workflows/: release.yml  release2.yml
